# qr_code_test

./: qr_code.py  qr_code.xlsx  qr_code_parse.py  qr_code_parsed.txt
yeti-code/: .clang-format  .cproject  .gitignore  .project  .projectlinkstore  CMakeLists.txt  app.c  main.c  yeti-display.pintool  yeti-display.slcp  yeti-display.slps
yeti-code/autogen/: .crc_config.crc  linkerfile.ld  sl_component_catalog.h  sl_event_handler.c  sl_i2cspm_init.c  sl_i2cspm_instances.h  sl_pwm_init.c  sl_pwm_instances.h  sl_simple_button_instances.c  sl_simple_button_instances.h  sl_simple_led_instances.c  sl_simple_led_instances.h  sl_spidrv_init.c  sl_spidrv_instances.h  sl_uartdrv_init.c  sl_uartdrv_instances.h
yeti-code/config/: pin_config.h  sl_device_init_dcdc_config.h  sl_emlib_gpio_init_eeprom_enable_config.h  sl_i2cspm_eeprom_i2c_config.h  sl_pwm_init_pwm_buzzer_config.h  sl_simple_button_3pbs_close_config.h  sl_simple_button_3pbs_loop_config.h  sl_simple_button_3pbs_open_config.h  sl_simple_button_3pbs_stop_config.h  sl_simple_led_lcd_backlight_config.h  sl_simple_led_lcd_reset_config.h  sl_simple_led_led_d10_config.h  sl_spidrv_lcd_spi_config.h  sl_uartdrv_eusart_powered_uart_config.h  sl_uartdrv_usart_debug_uart_config.h
yeti-code/gecko_sdk_4.0.2/: CMakeLists.txt
yeti-code/proj/: build-target.sh  cmake-build-system.sh  cmakelists-check.sh
yeti-code/proj/cmake/: arm-cortex.cmake  compile_warnings.cmake  linker-script.cmake  map-file.cmake
yeti-code/proj/docker/: Dockerfile  build.sh  debug-container.sh  docker-compose.yml  sonarqube.properties  teamcity-build.sh  teamcity-sonarqube.sh  teamcity-whitesource.sh  wss-unified-agent.config
yeti-code/proj/jlink/: EFM32PG22CXXXF64.jlink  EFM32PG22_flash_yeti-display.sh
yeti-code/source/: CMakeLists.txt
yeti-code/source/driver_wrappers/: CMakeLists.txt
yeti-code/source/driver_wrappers/inc/: base_gpio_driver.h  base_pwm_driver.h  base_sercomm_driver.h  button_gpio.h  buzzer_pwm.h  debug_uart.h  eeprom_gpio.h  gpio_led.h  lcd_gpio.h  lcd_spi.h  powered_uart.h  watchdog.h
yeti-code/source/driver_wrappers/src/: button_gpio.c  buzzer_pwm.c  debug_uart.c  eeprom_gpio.c  gpio_led.c  lcd_gpio.c  lcd_spi.c  powered_uart.c  watchdog.c
yeti-code/source/hal/: CMakeLists.txt
yeti-code/source/hal/inc/: beeper.h  buttons.h  command_broker.h  debug_log.h  lcd.h  lcd_font_4_22.h
yeti-code/source/hal/src/: beeper.c  buttons.c  command_broker.c  debug_log.c  lcd.c  lcd_font_4_22.c
yeti-code/tools/: command_broker_client.py  display-boot-display-rx.ptp  inputdata.py
